apollo/provisioning/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollo
  labels:
    app: apollo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apollo
  template:
    metadata:
      labels:
        app: apollo
    spec:
      containers:
      - name: apollo
        image: loginkr/u-hub_apollo:master
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
