apollo/provisioning/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apollo-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1
        backend:
          serviceName: apollo
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apollo-ws
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.org/websocket-services: "apollo"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
  - http:
      paths:
      - path: "/graphql*"
        backend:
          serviceName: apollo
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apollo-playground
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /playground
        backend:
          serviceName: apollo
          servicePort: 80
